--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -7,23 +7,22 @@ jobs:
     runs-on: ubuntu-latest
     name: ruff-mypy
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up Python 3.12
+    - name: "Set up Python"
       uses: actions/setup-python@v5
       with:
         python-version: "3.12"
+    - uses: actions/checkout@v4
+    - name: Install uv
+      uses: astral-sh/setup-uv@v4
     # Installing all dependencies and not just the linters as mypy needs them for type checking
     - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        pip install hatch
+      run: uv pip install -e ".[dev, all]" --system
     - name: Lint with ruff
       run: |        
-        hatch run ruff check .        
+        uv run ruff check
     - name: Check formatting with ruff
       run: |
-        hatch run ruff format --diff .
-        hatch run ruff format --check .
+        uv run ruff format --check --diff
     - name: Lint with mypy
       run: |
-        hatch run mypy altair tests
+        uv run mypy altair tests
