fix: add `tomllib/tomli` compat layer
https://github.com/vega/altair/actions/runs/12456841158/job/34770747096?pr=3720

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,6 +84,7 @@ dev = [
     "types-setuptools",
     "geopandas",
     "polars>=0.20.3",
+    "tomli; python_version<\"3.11\""
 ]
 doc = [
     "sphinx",
