--- a/pyproject.toml
+++ b/pyproject.toml
@@ -179,7 +179,7 @@ clean-all-win = [
     "if exist doc\\_images rd /s /q doc\\_images",
 ]
 build-html = [
-    "mkdir -p doc/_images",
+    "mkdir doc/_images",
     "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html",
 ]
 build-html-win = [
