--- a/pyproject.toml
+++ b/pyproject.toml
@@ -189,10 +189,11 @@ build-html-win = [
 doctest = "sphinx-build -b doctest -d doc/_build/doctrees doc doc/_build/doctest"
 coverage = "sphinx-build -b coverage -d doc/_build/doctrees doc doc/_build/coverage"
 serve = "(cd doc/_build/html && python -m http.server)"
+publish = "python doc/sync_website.py --no-commit"
 publish-clean-build = [
     "clean-all",
     "build-html",
-    "(cd doc && bash sync_website.sh)",
+    "publish"
 ]
 
 [tool.ruff]
