refactor: Move `PYTEST_ARGS` -> `tool.pytest.ini_options.addopts`
This is the non-`hatch` equivalent of `tool.hatch.envs.hatch-test.default-args`
https://hatch.pypa.io/latest/config/internal/testing/#default-arguments

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -431,7 +431,7 @@ docstring-code-line-length = 88
 # They contain examples which are being executed by the
 # test_examples tests.
 norecursedirs = ["tests/examples_arguments_syntax", "tests/examples_methods_syntax"]
-addopts = ["--numprocesses=logical"]
+addopts = ["--numprocesses=logical", "--doctest-modules", "tests", "altair", "tools"]
 # https://docs.pytest.org/en/stable/how-to/mark.html#registering-marks
 markers = [
     "slow: Label tests as slow (deselect with '-m \"not slow\"')"
