feat: Improve `*_cmd` functions
- Add docs
- Handle semicolon joining in one place
- align `mkdir_cmd` with `mkdir -p` (https://ss64.com/bash/mkdir.html)

--- a/tasks.toml
+++ b/tasks.toml
@@ -35,7 +35,7 @@ export-tasks = [
 
 [tool.altair.tasks.build-html]
 commands = [
-    "python -c \"from pathlib import Path;Path('doc/_images').mkdir(exist_ok=True)\"",
+    "python -c \"from pathlib import Path;Path('doc/_images').mkdir(parents=True, exist_ok=True)\"",
     "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html",
 ]
 extras = ["doc"]
