ci(typing): Add bundled stubs to `pyright.ignore`
Example:
$HOME/.vscode/extensions/ms-python.vscode-pylance-2024.12.1/dist/typeshed-fallback/stdlib\builtins.pyi Overload 1 for "vars" overlaps overload 2 and returns an incompatible type Pylance(reportOverlappingOverload)

The source of these warnings is https://github.com/python/typeshed/blob/2cdda12df78275b98a5d3cdc8a92f93d596d9d5d/pyrightconfig.json

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -476,4 +476,5 @@ ignore=[
     "./altair/jupyter/",                        # Mostly untyped
     "./tests/test_jupyter_chart.py",            # Based on untyped module
     "../../../**/Lib",                          # stdlib
+    "../../../**/typeshed*"                     # typeshed-fallback
 ]
