--- a/tasks.toml
+++ b/tasks.toml
@@ -13,37 +13,37 @@ generate-schema-wrapper = [
     "test",
 ]
 update-init-file = ["python tools/update_init_file.py", "ruff-fix"]
-clean = [
+doc-clean = [
     "python -c \"import shutil;shutil.rmtree('doc/_build', ignore_errors=True)\"",
 ]
-clean-generated = [
+doc-clean-generated = [
     "python -c \"import shutil;shutil.rmtree('doc/user_guide/generated', ignore_errors=True)\"",
     "python -c \"import shutil;shutil.rmtree('doc/gallery', ignore_errors=True)\"",
 ]
-clean-all = [
-    "clean",
-    "clean-generated",
+doc-clean-all = [
+    "doc-clean",
+    "doc-clean-generated",
     "python -c \"import shutil;shutil.rmtree('doc/_images', ignore_errors=True)\"",
 ]
-serve = [
+doc-serve = [
     "python -m http.server --bind \"127.0.0.1\" --directory doc/_build/html 8000",
 ]
-publish = ["python tools/sync_website.py --no-commit"]
+doc-publish = ["python tools/sync_website.py --no-commit"]
 export-tasks = [
     "python -c \"from tools.tasks import app;app.to_path('tasks.toml')\"",
 ]
 
-[tool.altair.tasks.build-html]
+[tool.altair.tasks.doc-build-html]
 commands = [
     "python -c \"from pathlib import Path;Path('doc/_images').mkdir(parents=True, exist_ok=True)\"",
     "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html",
 ]
 extras = ["doc"]
 
-[tool.altair.tasks.clean-build]
-commands = ["clean-all", "build-html"]
+[tool.altair.tasks.doc-clean-build]
+commands = ["doc-clean-all", "doc-build-html"]
 extras = ["doc"]
 
-[tool.altair.tasks.publish-clean-build]
-commands = ["clean-build", "publish"]
+[tool.altair.tasks.doc-publish-clean-build]
+commands = ["doc-clean-build", "doc-publish"]
 extras = ["doc"]
