--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ doc = [
     "myst-parser",
     "sphinx_copybutton",
     "sphinx-design",
-    "scipy",
+    "scipy-stubs[scipy]",
 ]
 
 [tool.hatch.version]
