ci(typing): ignore `scipy` on `3.9`
https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker

https://github.com/vega/altair/actions/runs/12612565960/job/35149436953?pr=3747

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -452,8 +452,10 @@ module = [
     "ipykernel.*",
     "ibis.*",
     "vegafusion.*",
+    "scipy.*"
 ]
 ignore_missing_imports = true
+disable_error_code = ["import-untyped"]
 
 [tool.pyright]
 enableExperimentalFeatures=true
