--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,8 @@ dev = [
     "types-setuptools",
     "geopandas",
     "polars>=0.20.3",
-    "tomli; python_version<\"3.11\""
+    "taskipy>=1.14.1",
+    "tomli>=2.2.1",
 ]
 doc = [
     "sphinx",
@@ -350,6 +351,38 @@ line-ending = "lf"
 # https://docs.astral.sh/ruff/formatter/#docstring-formatting
 docstring-code-format = true
 docstring-code-line-length = 88
+
+[tool.taskipy.settings]
+cwd = "."
+
+[tool.taskipy.tasks]
+lint       = "ruff check"
+format     = "ruff format --diff --check"
+ruff-fix   = "task lint && ruff format"
+type-check = "mypy altair tests"
+
+pytest    = "pytest"
+test      = "task lint && task format && task type-check && task pytest"
+test-fast = "task ruff-fix && pytest -m \"not slow\""
+test-slow = "task ruff-fix && pytest -m \"slow\""
+
+generate-schema-wrapper = "mypy tools && python tools/generate_schema_wrapper.py && task test"
+update-init-file        = "python tools/update_init_file.py && task ruff-fix"
+
+doc-clean               = "python -c \"import shutil;shutil.rmtree('doc/_build', ignore_errors=True)\""
+doc-clean-generated     = "python -c \"import shutil;shutil.rmtree('doc/user_guide/generated', ignore_errors=True);shutil.rmtree('doc/gallery', ignore_errors=True)\""
+doc-clean-images        = "python -c \"import shutil;shutil.rmtree('doc/_images', ignore_errors=True)\""
+doc-clean-all           = "task doc-clean && task doc-clean-generated && task doc-clean-images"
+doc-mkdir               = """python -c \"from pathlib import Path;Path('doc/_images').mkdir(parents=True, exist_ok=True)\""""
+doc-build-html          = "task doc-mkdir && sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html"
+doc-clean-build         = "task doc-clean-all && task doc-build-html"
+doc-serve               = "python -m http.server --bind \"127.0.0.1\" --directory doc/_build/html 8000"
+doc-publish             = "python tools/sync_website.py"
+doc-publish-clean-build = "task doc-clean-build && task doc-publish"
+
+clean   = "python -c \"import shutil;shutil.rmtree('dist', ignore_errors=True)\""
+build   = "task clean && uv build"
+publish = "task build && uv publish"
 
 [tool.pytest.ini_options]
 # Pytest does not need to search these folders for test functions.
