refactor: Remove `_tasks.py`, work into `fs.py`
- Has parts of prior `sync_website.py`
- Utilizes for more concises commands in `[tool.taskipy.tasks]`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -371,18 +371,18 @@ test-all  = "task lint && task format && task type-check && hatch test --all"
 generate-schema-wrapper = "mypy tools && python tools/generate_schema_wrapper.py && task test"
 update-init-file        = "python tools/update_init_file.py && task ruff-fix"
 
-doc-clean               = "python -c \"import shutil;shutil.rmtree('doc/_build', ignore_errors=True)\""
-doc-clean-generated     = "python -c \"import shutil;shutil.rmtree('doc/user_guide/generated', ignore_errors=True);shutil.rmtree('doc/gallery', ignore_errors=True)\""
-doc-clean-images        = "python -c \"import shutil;shutil.rmtree('doc/_images', ignore_errors=True)\""
+doc-clean               = "python -c \"import tools;tools.fs.rm('doc/_build')\""
+doc-clean-generated     = "python -c \"import tools;tools.fs.rm('doc/user_guide/generated', 'doc/gallery')\""
+doc-clean-images        = "python -c \"import tools;tools.fs.rm('doc/_images')\""
 doc-clean-all           = "task doc-clean && task doc-clean-generated && task doc-clean-images"
-doc-mkdir               = """python -c \"from pathlib import Path;Path('doc/_images').mkdir(parents=True, exist_ok=True)\""""
+doc-mkdir               = "python -c \"import tools;tools.fs.mkdir('doc/_images')\""
 doc-build-html          = "task doc-mkdir && sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html"
 doc-clean-build         = "task doc-clean-all && task doc-build-html"
 doc-serve               = "python -m http.server --bind \"127.0.0.1\" --directory doc/_build/html 8000"
 doc-publish             = "python tools/sync_website.py"
 doc-publish-clean-build = "task doc-clean-build && task doc-publish"
 
-clean   = "python -c \"import shutil;shutil.rmtree('dist', ignore_errors=True)\""
+clean   = "python -c \"import tools;tools.fs.rm('dist')\""
 build   = "task clean && uv build"
 publish = "task build && uv publish"
 
