feat: Source version from `tool.altair.vega.vega-datasets`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,7 +102,7 @@ doc = [
 
 [tool.altair.vega]
 # Minimum/exact versions, for projects under the `vega` organization
-vega-datasets     = "v2.11.0" # https://github.com/vega/vega-datasets
+vega-datasets     = "main" # https://github.com/vega/vega-datasets
 vega-embed        = "6"       # https://github.com/vega/vega-embed
 vega-lite         = "v5.21.0" # https://github.com/vega/vega-lite
 
