--- a/pyproject.toml
+++ b/pyproject.toml
@@ -84,7 +84,8 @@ dev = [
     "types-setuptools",
     "geopandas",
     "polars>=0.20.3",
-    "tomli; python_version<\"3.11\""
+    "taskipy>=1.14.1",
+    "tomli>=2.2.1",
 ]
 doc = [
     "sphinx",
@@ -106,101 +107,20 @@ vega-datasets     = "v2.11.0" # https://github.com/vega/vega-datasets
 vega-embed        = "6"       # https://github.com/vega/vega-embed
 vega-lite         = "v5.21.0" # https://github.com/vega/vega-lite
 
-[tool.hatch.version]
-path = "altair/__init__.py"
+[tool.hatch]
+build    = { include = ["/altair"], artifacts = ["altair/jupyter/js/index.js"] }
+metadata = { allow-direct-references = true }
+version  = { path = "altair/__init__.py" }
 
-[tool.hatch.metadata]
-allow-direct-references = true
-
-[tool.hatch.build]
-include = ["/altair"]
-artifacts = ["altair/jupyter/js/index.js"]
-
-[tool.hatch.envs.default]
-features = ["all", "dev"]
+[tool.hatch.envs]
 # https://hatch.pypa.io/latest/how-to/environment/select-installer/#enabling-uv
-installer = "uv"
-
-[tool.hatch.envs.default.scripts]
-generate-schema-wrapper = [
-    "mypy tools",
-    "python tools/generate_schema_wrapper.py",
-    "test"
-]
-test = [
-    "ruff check .",
-    "ruff format --diff --check .",
-    "mypy altair tests",
-    "python -m pytest --pyargs --numprocesses=logical --doctest-modules tests altair tools",
-]
-test-coverage = "python -m pytest --pyargs --doctest-modules --cov=altair --cov-report term altair"
-test-coverage-html = "python -m pytest --pyargs --doctest-modules --cov=altair --cov-report html altair"
-update-init-file = [
-    "python tools/update_init_file.py",
-    "ruff check .",
-    "ruff format .",
-]
-test-fast = [
-    "ruff check .", "ruff format .",
-    "pytest -p no:randomly -n logical --numprocesses=logical --doctest-modules tests altair tools -m \"not slow\" {args}"
-]
-test-slow = [
-    "ruff check .", "ruff format .",
-    "pytest -p no:randomly -n logical --numprocesses=logical --doctest-modules tests altair tools -m \"slow\" {args}"
-]
+default = { features = ["all", "dev"], installer = "uv" }
+doc     = { features = ["all", "dev", "doc"] }
 
 [tool.hatch.envs.hatch-test]
 # https://hatch.pypa.io/latest/tutorials/testing/overview/
 features = ["all", "dev", "doc"]
-# https://pytest-xdist.readthedocs.io/en/latest/distribution.html#running-tests-across-multiple-cpus
-default-args = ["--numprocesses=logical","--doctest-modules", "tests", "altair", "tools"]
-parallel = true
-[[tool.hatch.envs.hatch-test.matrix]]
-python = ["3.9", "3.10", "3.11", "3.12", "3.13"]
-[tool.hatch.envs.hatch-test.scripts]
-run = [
-    "ruff check .", 
-    "ruff format --diff --check .",
-    "mypy altair tests",
-    "pytest{env:HATCH_TEST_ARGS:} {args}"
-]
-run-cov = "coverage run -m pytest{env:HATCH_TEST_ARGS:} {args}"
-cov-combine = "coverage combine"
-cov-report = "coverage report"
-
-[tool.hatch.envs.doc]
-features = ["all", "dev", "doc"]
-
-[tool.hatch.envs.doc.scripts]
-clean = "rm -rf doc/_build"
-clean-generated = ["rm -rf doc/user_guide/generated", "rm -rf doc/gallery"]
-clean-all = ["clean", "clean-generated", "rm -rf doc/_images"]
-clean-win = "if exist doc\\_build rd /s /q doc\\_build"
-clean-generated-win = [
-    "if exist doc\\user_guide\\generated rd /s /q doc\\user_guide\\generated",
-    "if exist doc\\gallery rd /s /q doc\\gallery",
-]
-clean-all-win = [
-    "clean-win",
-    "clean-generated-win",
-    "if exist doc\\_images rd /s /q doc\\_images",
-]
-build-html = [
-    "mkdir -p doc/_images",
-    "sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html",
-]
-build-html-win = [
-    "if not exist doc\\_images md doc\\_images",
-    "sphinx-build -b html -d doc\\_build\\doctrees doc doc\\_build\\html",
-]
-doctest = "sphinx-build -b doctest -d doc/_build/doctrees doc doc/_build/doctest"
-coverage = "sphinx-build -b coverage -d doc/_build/doctrees doc doc/_build/coverage"
-serve = "(cd doc/_build/html && python -m http.server)"
-publish-clean-build = [
-    "clean-all",
-    "build-html",
-    "(cd doc && bash sync_website.sh)",
-]
+matrix   = [{ python = ["3.9", "3.10", "3.11", "3.12", "3.13"] }]
 
 [tool.ruff]
 exclude = [
@@ -334,12 +254,46 @@ docstring-code-format      = true # https://docs.astral.sh/ruff/formatter/#docst
 docstring-code-line-length = 88
 line-ending                = "lf"
 
+[tool.taskipy.settings]
+cwd = "."
+
+[tool.taskipy.tasks]
+lint       = "ruff check"
+format     = "ruff format --diff --check"
+ruff-fix   = "task lint && ruff format"
+type-check = "mypy altair tests"
+
+pytest    = "pytest"
+test      = "task lint && task format && task type-check && task pytest"
+test-fast = "task ruff-fix && pytest -m \"not slow\""
+test-slow = "task ruff-fix && pytest -m \"slow\""
+test-min  = "task lint && task format && task type-check && hatch test --python 3.9"
+test-all  = "task lint && task format && task type-check && hatch test --all"
+
+generate-schema-wrapper = "mypy tools && python tools/generate_schema_wrapper.py && task test"
+update-init-file        = "python tools/update_init_file.py && task ruff-fix"
+
+doc-clean               = "python -c \"import tools;tools.fs.rm('doc/_build')\""
+doc-clean-generated     = "python -c \"import tools;tools.fs.rm('doc/user_guide/generated', 'doc/gallery')\""
+doc-clean-images        = "python -c \"import tools;tools.fs.rm('doc/_images')\""
+doc-clean-all           = "task doc-clean && task doc-clean-generated && task doc-clean-images"
+doc-mkdir               = "python -c \"import tools;tools.fs.mkdir('doc/_images')\""
+doc-build-html          = "task doc-mkdir && sphinx-build -b html -d doc/_build/doctrees doc doc/_build/html"
+doc-clean-build         = "task doc-clean-all && task doc-build-html"
+doc-serve               = "python -m http.server --bind \"127.0.0.1\" --directory doc/_build/html 8000"
+doc-publish             = "python tools/sync_website.py"
+doc-publish-clean-build = "task doc-clean-build && task doc-publish"
+
+clean   = "python -c \"import tools;tools.fs.rm('dist')\""
+build   = "task clean && uv build"
+publish = "task build && uv publish"
+
 [tool.pytest.ini_options]
 # Pytest does not need to search these folders for test functions.
 # They contain examples which are being executed by the
 # test_examples tests.
 norecursedirs = ["tests/examples_arguments_syntax", "tests/examples_methods_syntax"]
-addopts = ["--numprocesses=logical"]
+addopts = ["--numprocesses=logical", "--doctest-modules", "tests", "altair", "tools"]
 # https://docs.pytest.org/en/stable/how-to/mark.html#registering-marks
 markers = [
     "slow: Label tests as slow (deselect with '-m \"not slow\"')"
