docs(example): Adds Confidence Interval Ellipses (#3747)
* Create deviation_ellipses.py

example showing bivariate deviation ellipses of petal length and width of three iris species

* docs: Initial rewrite of (#514)

Happy with the end result, but not comfortable merging so much complexity I don't understand yet

#3715

* ci(typing): Adds `scipy-stubs` to `altair[doc]`

`scipy` is only used for one example in the user guide, but this will be the second
https://docs.scipy.org/doc/scipy/release/1.15.0-notes.html#other-changes

* fix: Only install `scipy-stubs` on `>=3.10`

* chore(typing): Ignore incorrect `pandas` stubs

* ci(typing): ignore `scipy` on `3.9`

https://mypy.readthedocs.io/en/stable/running_mypy.html#missing-library-stubs-or-py-typed-marker

https://github.com/vega/altair/actions/runs/12612565960/job/35149436953?pr=3747

* docs: Add missing category

* fix: Add missing support for `from __future__ import annotations`

Fixes https://github.com/vega/altair/actions/runs/12612637008/job/35149593128?pr=3747#step:6:25

* test: skip example when `scipy` not installed

Temporary fix for https://github.com/vega/altair/actions/runs/12612997919/job/35150338097?pr=3747

* docs: reduce segments `100` -> `50`

Observed no visible reduction in quality.
Slightly visible at `<=40`

* docs: Clean up `numpy`, `scipy` docs/comments

* refactor: Simplify `numpy` transforms

* docs: add tooltip, increase size

* fix: Remove incorrect range stop

Previously returned `segments+1` rows, but this isn't specified in `ggplot2
https://github.com/tidyverse/ggplot2/blob/efc53cc000e7d86e3db22e1f43089d366fe24f2e/R/stat-ellipse.R#L122

* refactor: Remove special casing `__future__` import

I forgot that the only requirement was that the import is the **first statement**.

Partially reverts (https://github.com/vega/altair/pull/3747/commits/7cd2a775566891d5be861252ac0f87b351ac6351)

* docs: Remove unused `method` code

Also resolves https://github.com/vega/altair/pull/3747#discussion_r19

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,6 +99,7 @@ doc = [
     "sphinx_copybutton",
     "sphinx-design",
     "scipy",
+    "scipy-stubs; python_version>=\"3.10\"",
 ]
 
 [tool.altair.vega]
@@ -314,8 +315,10 @@ module = [
     "ipykernel.*",
     "ibis.*",
     "vegafusion.*",
+    "scipy.*"
 ]
 ignore_missing_imports = true
+disable_error_code = ["import-untyped"]
 
 [tool.pyright]
 enableExperimentalFeatures=true
