feat: Update for `vega-datasets@3.0.0-alpha.1`
Made possible via https://github.com/vega/vega-datasets/pull/681

- Removes temp files
- Removes some outdated apis
- Remove test based on removed `"points"` dataset

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,9 +104,9 @@ doc = [
 
 [tool.altair.vega]
 # Minimum/exact versions, for projects under the `vega` organization
-vega-datasets     = "main" # https://github.com/vega/vega-datasets
-vega-embed        = "6"       # https://github.com/vega/vega-embed
-vega-lite         = "v5.21.0" # https://github.com/vega/vega-lite
+vega-datasets     = "3.0.0-alpha.1" # https://github.com/vega/vega-datasets
+vega-embed        = "6"             # https://github.com/vega/vega-embed
+vega-lite         = "v5.21.0"       # https://github.com/vega/vega-lite
 
 [tool.hatch]
 build    = { include = ["/altair"], artifacts = ["altair/jupyter/js/index.js"] }
