ci(ruff): move `exclude` to `extend-exclude`
https://docs.astral.sh/ruff/settings/#extend-exclude

Moving the config here allows for inheriting user-specific excludes - which are currently overriden.
I've been having issues with `ruff` wanting to fix my `.venv` and this lets me remove those warnings (without polluting our `pyproject.toml`).
Can always add to our excludes *later* if anyone else encounters the same issue

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -124,7 +124,7 @@ features = ["all", "dev", "doc"]
 matrix   = [{ python = ["3.9", "3.10", "3.11", "3.12", "3.13"] }]
 
 [tool.ruff]
-exclude = [
+extend-exclude = [
     ".git",
     "__pycache__",
     "build",
