chore: bump `vega-datasets==3.1.0`

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -104,7 +104,7 @@ doc = [
 
 [tool.altair.vega]
 # Minimum/exact versions, for projects under the `vega` organization
-vega-datasets     = "3.0.0-alpha.1" # https://github.com/vega/vega-datasets
+vega-datasets     = "3.1.0"         # https://github.com/vega/vega-datasets
 vega-embed        = "6"             # https://github.com/vega/vega-embed
 vega-lite         = "v5.21.0"       # https://github.com/vega/vega-lite
 
