ci(typing): `mypy` ignore `polars-st`
https://github.com/vega/altair/actions/runs/14494920661/job/40660098022?pr=3631

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -335,7 +335,8 @@ module = [
     "ipykernel.*",
     "ibis.*",
     "vegafusion.*",
-    "scipy.*"
+    "scipy.*",
+    "polars_st.*",
 ]
 ignore_missing_imports = true
 disable_error_code = ["import-untyped"]
