feat: Bump `vega-lite>=6` (#3831)
* bumped vega embed version

see https://github.com/vega/altair/issues/3828#issuecomment-2817397612

* - bumped at referenced places

* - more

* - bumped vegalite

* - moved from 5 to 6

* update tools

* more tools

* changes to sphinx extension

* renamed tests

* changes docs

* auto generated files mods

* changes to chore

* python changes

* more python changes

* first line is written by `update_vega_embed` function within `versioning.py` when called in `generate_schema_wrapper.py` on line `VERSIONS.update_all()`

* - bumped vegalite

* - moved from 5 to 6

* update tools

* more tools

* changes to sphinx extension

* renamed tests

* changes docs

* auto generated files mods

* changes to chore

* python changes

* more python changes

* first line is written by `update_vega_embed` function within `versioning.py` when called in `generate_schema_wrapper.py` on line `VERSIONS.update_all()`

* build: run `generate-schema-wrapper`

Should fix this *specfic* failure https://github.com/vega/altair/actions/runs/14695042187/job/41235514359?pr=3831

`vl_convert` is still a blocker

* bump vlc to 1.8.0

* vega & vl to 6

* add new expressions

* catch inf recursion

* update test to new height

* had to remove the `+` after `v6`
before: application/vnd.vega.v6+json
after: application/vnd.vega.v6json

* catch py3.13: BufferError: Existing exports of data: object cannot be re-sized

* apply changes within tools

* picnic?

---------

Co-authored-by: Mattijn van Hoek <mattijn@gmail.com>
Co-authored-by: dangotbanned <125183946+dangotbanned@users.noreply.github.com>

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,7 +55,7 @@ Source = "https://github.com/vega/altair"
 
 [project.optional-dependencies]
 save = [
-    "vl-convert-python>=1.7.0",
+    "vl-convert-python>=1.8.0",
 ]
 all = [
     "altair[save]",
@@ -104,9 +104,9 @@ doc = [
 
 [tool.altair.vega]
 # Minimum/exact versions, for projects under the `vega` organization
-vega-datasets     = "v2.11.0" # https://github.com/vega/vega-datasets
-vega-embed        = "7"       # https://github.com/vega/vega-embed
-vega-lite         = "v5.21.0" # https://github.com/vega/vega-lite
+vega-datasets     = "v3" # https://github.com/vega/vega-datasets
+vega-embed        = "v7"       # https://github.com/vega/vega-embed
+vega-lite         = "v6.1.0" # https://github.com/vega/vega-lite
 
 [tool.hatch]
 build    = { include = ["/altair"], artifacts = ["altair/jupyter/js/index.js"] }
@@ -247,7 +247,7 @@ See https://github.com/vega/altair/pull/3449
 """
 
 [tool.ruff.lint.per-file-ignores]
-"!altair/vegalite/v5/api.py" = ["ANN"]  # Only enforce annotation rules on public api
+"!altair/vegalite/v6/api.py" = ["ANN"]  # Only enforce annotation rules on public api
 "tests/**/*.py"              = ["C901"] # Allow complex if/elif branching during tests
 
 [tool.ruff.format]
@@ -344,8 +344,8 @@ include=[
     "./sphinxext/**/*.py",
 ]
 ignore=[
-    "./altair/vegalite/v5/schema/channels.py",  # 716 warns
-    "./altair/vegalite/v5/schema/mixins.py",    # 1001 warns
+    "./altair/vegalite/v6/schema/channels.py",  # 716 warns
+    "./altair/vegalite/v6/schema/mixins.py",    # 1001 warns
     "./altair/jupyter/",                        # Mostly untyped
     "./tests/test_jupyter_chart.py",            # Based on untyped module
     "../../../**/Lib",                          # stdlib
