--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -1,31 +1,31 @@
+---
 name: Nightly Build and Publish
-
-on:
+'on':
   schedule:
-    # Run every Monday, Wednesday, Friday at 3:00 AM UTC
     - cron: '0 3 * * 1,3,5'
-  workflow_dispatch: # Allow manual triggering
-
+  workflow_dispatch: null
 env:
   UV_SYSTEM_PYTHON: 1
-
 jobs:
   check-changes:
     runs-on: ubuntu-latest
     outputs:
-      has-changes: ${{ steps.check.outputs.has-changes }}
-      last-nightly-commit: ${{ steps.check.outputs.last-nightly-commit }}
-      current-commit: ${{ steps.check.outputs.current-commit }}
+      has-changes: '${{ steps.check.outputs.has-changes }}'
+      last-nightly-commit: '${{ steps.check.outputs.last-nightly-commit }}'
+      current-commit: '${{ steps.check.outputs.current-commit }}'
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Need full history for versioning
+          fetch-depth: 0
       - name: Check for changes since last nightly
         id: check
-        run: |
+        run: >
           # Get the latest nightly release tag
-          LATEST_NIGHTLY_TAG=$(git tag --list "nightly-*" --sort=-version:refname | head -n 1)
-          
+
+          LATEST_NIGHTLY_TAG=$(git tag --list "nightly-*"
+          --sort=-version:refname | head -n 1)
+
+
           if [ -z "$LATEST_NIGHTLY_TAG" ]; then
             echo "No nightly tags found, will build (first time)"
             echo "has-changes=true" >> $GITHUB_OUTPUT
@@ -33,15 +33,22 @@ jobs:
             echo "current-commit=$(git rev-parse HEAD)" >> $GITHUB_OUTPUT
             exit 0
           fi
-          
+
+
           # Get the commit hash from the latest nightly tag
+
           LATEST_NIGHTLY_COMMIT=$(git rev-list -n 1 "$LATEST_NIGHTLY_TAG")
+
           CURRENT_COMMIT=$(git rev-parse HEAD)
-          
+
+
           echo "last-nightly-commit=${LATEST_NIGHTLY_COMMIT}" >> $GITHUB_OUTPUT
+
           echo "current-commit=${CURRENT_COMMIT}" >> $GITHUB_OUTPUT
-          
+
+
           # Check if there are any commits since the last nightly
+
           if [ "$LATEST_NIGHTLY_COMMIT" = "$CURRENT_COMMIT" ]; then
             echo "No changes since last nightly build"
             echo "has-changes=false" >> $GITHUB_OUTPUT
@@ -49,21 +56,25 @@ jobs:
             echo "Changes detected since last nightly build"
             echo "has-changes=true" >> $GITHUB_OUTPUT
           fi
-
   nightly-build:
     needs: check-changes
     if: needs.check-changes.outputs.has-changes == 'true'
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.9", "3.10", "3.11", "3.12", "3.13"]
-    name: Test py ${{ matrix.python-version }}
+        python-version:
+          - '3.9'
+          - '3.10'
+          - '3.11'
+          - '3.12'
+          - '3.13'
+    name: 'Test py ${{ matrix.python-version }}'
     steps:
       - uses: actions/checkout@v4
-      - name: Set up Python ${{ matrix.python-version }}
+      - name: 'Set up Python ${{ matrix.python-version }}'
         uses: actions/setup-python@v5
         with:
-          python-version: ${{ matrix.python-version }}
+          python-version: '${{ matrix.python-version }}'
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install dependencies
@@ -79,19 +90,20 @@ jobs:
       - name: Build documentation
         run: |
           uv run task doc-clean-build
-
   nightly-publish:
-    needs: [check-changes, nightly-build]
+    needs:
+      - check-changes
+      - nightly-build
     if: needs.check-changes.outputs.has-changes == 'true'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
         with:
-          fetch-depth: 0  # Need full history for versioning
+          fetch-depth: 0
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: "3.12"
+          python-version: '3.12'
       - name: Install uv
         uses: astral-sh/setup-uv@v6
       - name: Install dependencies
@@ -107,21 +119,27 @@ jobs:
           echo "nightly_version=${NIGHTLY_VERSION}" >> $GITHUB_OUTPUT
           echo "Generated nightly version: ${NIGHTLY_VERSION}"
       - name: Update version files
-        run: |
+        run: >
           # Update version in __init__.py
-          sed -i "s/__version__ = .*/__version__ = \"${{ steps.version.outputs.nightly_version }}\"/" altair/__init__.py
+
+          sed -i "s/__version__ = .*/__version__ = \"${{
+          steps.version.outputs.nightly_version }}\"/" altair/__init__.py
+
           # Update version in conf.py
-          sed -i "s/release = .*/release = \"${{ steps.version.outputs.nightly_version }}\"/" doc/conf.py
+
+          sed -i "s/release = .*/release = \"${{
+          steps.version.outputs.nightly_version }}\"/" doc/conf.py
       - name: Build package
         run: |
           uv run task build
       - name: Sign wheel with Sigstore
         uses: sigstore/gha-cosign-installer@v4.0.0
         with:
-          cosign-release: 'v2.2.0'
+          cosign-release: v2.2.0
       - name: Sign wheel
-        run: |
-          cosign sign-blob dist/altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl \
+        run: >
+          cosign sign-blob dist/altair-${{ steps.version.outputs.nightly_version
+          }}-py3-none-any.whl \
             --output-signature dist/altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl.sig \
             --output-certificate dist/altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl.cert
       - name: Generate dependency diff
@@ -129,7 +147,7 @@ jobs:
         run: |
           # Get current dependencies
           uv pip freeze > current_deps.txt
-          
+
           # Get previous nightly dependencies if available
           if [ -f "previous_deps.txt" ]; then
             diff -u previous_deps.txt current_deps.txt > dependency_diff.txt || true
@@ -138,22 +156,26 @@ jobs:
             echo "No previous dependencies found (first nightly build)" > dependency_diff.txt
             echo "dependency_changes=false" >> $GITHUB_OUTPUT
           fi
-          
+
           # Save current deps for next run
           cp current_deps.txt previous_deps.txt
       - name: Generate binary file checksums
         id: checksums
-        run: |
+        run: >
           # Find all binary files in the project
-          find . -name "*.csv.gz" -o -name "*.parquet" -o -name "*.json.gz" | while read file; do
+
+          find . -name "*.csv.gz" -o -name "*.parquet" -o -name "*.json.gz" |
+          while read file; do
             if [ -f "$file" ]; then
               # Generate SHA256 checksum
               sha256sum "$file" >> binary_checksums.txt
               echo "Processed: $file"
             fi
           done
-          
+
+
           # Compare with previous checksums if available
+
           if [ -f "previous_checksums.txt" ]; then
             echo "=== Binary File Changes ===" > binary_changes.txt
             diff -u previous_checksums.txt binary_checksums.txt >> binary_changes.txt || true
@@ -162,75 +184,104 @@ jobs:
             echo "No previous binary checksums found (first nightly build)" > binary_changes.txt
             echo "binary_changes=false" >> $GITHUB_OUTPUT
           fi
-          
+
+
           # Save current checksums for next run
+
           cp binary_checksums.txt previous_checksums.txt
       - name: Create GitHub release with assets
         id: create_release
         uses: actions/create-release@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          tag_name: "nightly-${{ steps.version.outputs.nightly_version }}"
-          release_name: "Nightly Build ${{ steps.version.outputs.nightly_version }}"
-          body: |
+          tag_name: 'nightly-${{ steps.version.outputs.nightly_version }}'
+          release_name: 'Nightly Build ${{ steps.version.outputs.nightly_version }}'
+          body: >
             Nightly build of Altair
-            
+
+
             **Version:** ${{ steps.version.outputs.nightly_version }}
+
             **Commit:** ${{ github.sha }}
+
             **Date:** ${{ github.event.schedule }}
-            **Changes since last nightly:** ${{ needs.check-changes.outputs.last-nightly-commit }}
-            
+
+            **Changes since last nightly:** ${{
+            needs.check-changes.outputs.last-nightly-commit }}
+
+
             This is a pre-release version for testing purposes.
-            
+
+
             ## Installation
-            
+
+
             ### From GitHub Release
+
             Download the wheel file from the assets below and install:
+
             ```bash
-            pip install altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl
+
+            pip install altair-${{ steps.version.outputs.nightly_version
+            }}-py3-none-any.whl
+
             ```
-            
+
+
             ### From GitHub Repository
+
             ```bash
+
             pip install git+https://github.com/vega/altair.git@${{ github.sha }}
+
             ```
           draft: false
           prerelease: true
       - name: Upload wheel to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl
-          asset_name: altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
+          asset_path: >-
+            ./dist/altair-${{ steps.version.outputs.nightly_version
+            }}-py3-none-any.whl
+          asset_name: 'altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl'
           asset_content_type: application/octet-stream
       - name: Upload signatures to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl.sig
-          asset_name: altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl.sig
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
+          asset_path: >-
+            ./dist/altair-${{ steps.version.outputs.nightly_version
+            }}-py3-none-any.whl.sig
+          asset_name: >-
+            altair-${{ steps.version.outputs.nightly_version
+            }}-py3-none-any.whl.sig
           asset_content_type: application/octet-stream
       - name: Upload certificates to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./dist/altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl.cert
-          asset_name: altair-${{ steps.version.outputs.nightly_version }}-py3-none-any.whl.cert
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
+          asset_path: >-
+            ./dist/altair-${{ steps.version.outputs.nightly_version
+            }}-py3-none-any.whl.cert
+          asset_name: >-
+            altair-${{ steps.version.outputs.nightly_version
+            }}-py3-none-any.whl.cert
           asset_content_type: application/octet-stream
       - name: Upload dependency diff to release
         if: steps.deps.outputs.dependency_changes == 'true'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
           asset_path: ./dependency_diff.txt
           asset_name: dependency_diff.txt
           asset_content_type: text/plain
@@ -238,18 +289,18 @@ jobs:
         if: steps.checksums.outputs.binary_changes == 'true'
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
           asset_path: ./binary_changes.txt
           asset_name: binary_changes.txt
           asset_content_type: text/plain
       - name: Upload full checksums to release
         uses: actions/upload-release-asset@v1
         env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_TOKEN: '${{ secrets.GITHUB_TOKEN }}'
         with:
-          upload_url: ${{ steps.create_release.outputs.upload_url }}
+          upload_url: '${{ steps.create_release.outputs.upload_url }}'
           asset_path: ./binary_checksums.txt
           asset_name: binary_checksums.txt
-          asset_content_type: text/plain 
+          asset_content_type: text/plain
