ci: fix outdated `ipython[kernel]` dependency
Related #3507

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,7 +71,8 @@ dev = [
     "hatch>=1.13.0",
     "ruff>=0.9.5",
     "duckdb>=1.0",
-    "ipython[kernel]",
+    "ipython",
+    "ipykernel",
     "pandas>=1.1.3",
     "pyarrow-stubs",
     "pytest",
