--- a/pyproject.toml
+++ b/pyproject.toml
@@ -63,7 +63,7 @@ all = [
     "pandas>=1.1.3",
     "numpy",
     "pyarrow>=11",
-    "vegafusion[embed]>=1.6.6",
+    "vegafusion>=2.0.3",
     "anywidget>=0.9.0",
     "altair_tiles>=0.3.0"
 ]
@@ -306,7 +306,7 @@ nightly-release = "task nightly-build && echo 'Package built, ready for GitHub r
 
 [tool.pytest.ini_options]
 # Pytest does not need to search these folders for test functions.
-# They contain examples which are being executed by the
+# They contain examples which are being executed by the
 # test_examples tests.
 norecursedirs = ["tests/examples_arguments_syntax", "tests/examples_methods_syntax"]
 addopts = [
